<resources>
    <string name="app_name">Elaborato</string>
    <string name="spid">Entra con spid</string>
    <string name="tessera">Avvicina la tessera al telefono per accedere</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error">Errore: credenziali errate</string>
    <string name="account">Non hai un account? Clicca</string>
    <string name="qui">qui</string>
    <string name="nonAuth">Questo utente non è autorizzato, passa la tessera sul lettore NFC per diventare amministratore</string>
    <string name="nfc">Entra con NFC</string>
    <string name="auth">Autentica il tuo account</string>
    <string name="int_all">Intolleranze/Allergie</string>
    <string name="disclaimer">Attenzione! Se non sei sicuro, puoi chiedere aiuto ad un esperto</string>
    <string name="ana">Anafilassi</string>
    <string name="asma">Asma</string>
    <string name="masto">Mastocitosi</string>
    <string name="poli">Polisorbati</string>
    <string name="cons">Conservanti</string>
    <string name="sacc">Saccarosio</string>
    <string name="agrumi">Agrumi</string>
    <string name="poliet">Polietilenico</string>
    <string name="trom">Trometamina</string>
    <string name="cond">Condizioni Fisiche</string>
    <string name="ort">Orticaria</string>
    <string name="col_ul">Colite-Ulcerosa</string>
    <string name="ins_ren">Insufficienza Renale</string>
    <string name="maternita">Maternità</string>
    <string name="grav">Gravidanza</string>
    <string name="inzio_g">Inizio Gravidanza</string>
    <string name="all">Allattamento</string>
    <string name="inzio_a">Inizio Allattamento</string>
    <string name="confirm">Conferma</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="shortcut_label1">Login NFC</string>
    <string name="shortcut_label2">Autorizza</string>
    <string name="shortcut_label3">Login SPID</string>
    <string name="diabete">Diabete</string>
    <string name="booking">La sua richiesta è stata ricevuta, a breve le manderemo una mail</string>
    <string name="already">Una richiesta a carico suo è già stata ricevuta, attenda l\'arrivo della mail</string>
</resources>